# presenton_open_source

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
app/: main.ts  servers.ts  (+1 more)
resources/fastapi/: 1685515647.json  basic_report.txt  books_chapers_overview.json  books_info.json  buildspec.yml  cropped_books_path_and_info (1).json  cropped_books_path_and_info.json  data-update.json  data.json  email_test.py  emails-Apr_19 (1).json  emails.csv  emails.json  export_test.py  filter_emails.py  fly.toml  get_presentation_test.py  index.html  output.md  pyproject.toml  requirements.txt  save_images.py  server.py  server_test.py  sqlite.db  test.py  test_claude.py  test_gemini.py  test_marker.py  test_schema.py  test_stream.py  trim_documents.py
resources/fastapi/api/: main.py  models.py  request_utils.py  sql_models.py  utils.py
resources/fastapi/dataset-for-dpo/: 2.json  3.json  4.json  5.json  6.json
resources/fastapi/document_processor/: convert_document_marker.py  detect_graphs.py  embedder.py  file_to_markdown.py  loader.py  models.py
resources/fastapi/env/: pyvenv.cfg
resources/fastapi/graph_processor/: deplot_charts_and_tables.py  deplot_graphs.py  detector.py  edit_graph.py  extract_tables.py  extract_tables_from_text.py  generator.py  models.py
resources/fastapi/housekeeping/: icons_embedding_insert.py  language_embedding_insert.py  load_school_chapters.py
resources/fastapi/image_processor/: generator.py  image_from_pptx.py  metadata_generator.py  models.py  processor.py  utils.py
resources/fastapi/load-testing/: test-stream.py
(+447 files in other folders)
